k8s/kustomize/services/k8s-ingress/api-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhookie-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-gateway
                port:
                  name: http-traffic
