k8s/kustomize/services/k8s-ingress/portal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhookie-portal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: portal
                port:
                  name: http-traffic
